8262287: [lworld] C2 compilation fails with assert "should have been removed from the graph"

Reviewed-by: thartmann